<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PuzzleActivity">

    <TextView
        android:id="@+id/moveCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/move_count"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/solveButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/statisticsText"
        android:layout_width="249dp"
        android:layout_height="169dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/puzzle_instructions"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/solveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:onClick="solveProblem"
        android:text="@string/solve"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:onClick="nextMove"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:onClick="resetProblem"
        android:text="@string/reset"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/congrats"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout2" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/tileTwo"
            style="@style/TileStyle"
            android:onClick="slideTile2"
            android:text="@string/two"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/tileFive"
            style="@style/TileStyle"
            android:onClick="slideTile5"
            android:text="@string/five"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/tileSeven"
            style="@style/TileStyle"
            android:onClick="slideTile7"
            android:text="@string/seven"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/tileEight"
            style="@style/TileStyle"
            android:onClick="slideTile8"
            android:text="@string/eight"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/tileFour"
            style="@style/TileStyle"
            android:onClick="slideTile4"
            android:text="@string/four"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/tileThree"
            style="@style/TileStyle"
            android:onClick="slideTile3"
            android:text="@string/three"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/tileSix"
            style="@style/TileStyle"
            android:onClick="slideTile6"
            android:text="@string/six"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/tileOne"
            style="@style/TileStyle"
            android:onClick="slideTile1"
            android:text="@string/one"
            app:layout_column="2"
            app:layout_row="2" />
    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/illegal_move"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/moveCountLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/moveCountNum"
        android:layout_width="55dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/statisticsText"
        app:layout_constraintStart_toEndOf="@+id/moveCountLabel" />

</android.support.constraint.ConstraintLayout>

